log in finished

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,16 +2,16 @@
     "welcome": "Welcome to the",
     "welcomepl": "ArendaShop",
     "onSite1": "On this site you can rent and lease houses, plants, offices and more",
-    "onSite2": "On this site you don't need to look for clients to rent out houses, plots, offices and much more",
-    "onSite3": "On this site you don't need to look for clients to lease out houses, plots, offices and much more",
+    "onSite2": "On this site you don't need to look sellers for to rent out houses, plots, offices and much more",
+    "onSite3": "On this site you don't need to look clients for to lease out houses, plots, offices and much more",
     "ivideo": "Install video or photo ",
     "ivideopl": "(house, plant, office or more)",
-    "initalinf": "Inital Information ",
+    "initalinf": "Inital information ",
     "initalinfpl": "(house, plant, office or more)",
-    "additionalinf": "Additional Information",
+    "additionalinf": "Additional information",
     "price": "Price ",
     "pricepl": "($)",
-    "phonenum": "Your Phone Number",
+    "phonenum": "Your phone number",
     "savebtn": "Save",
     "lease": "Lease",
     "rent": "Rent",
@@ -23,5 +23,9 @@
     "about": "About",
     "contact": "Contact",
     "submitbtn": "Log in",
-    "lang": "EN"
+    "lang": "EN",
+    "additionalinfincard": "Beautiful, cozy and durable house for lease",
+    "phonenumber": "Phone Number",
+    "logout": "Log Out",
+    "oyiga": "(Per month)"
 }
