--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -2,7 +2,7 @@
     "welcome": "Добро пожаловать в",
     "welcomepl": "ArendaShop",
     "onSite1": "На этом сайте вы можете арендовать и сдавать в аренду дома, участки, офисы и многое другое",
-    "onSite2": "На этом сайте вам не нужно искать клиентов для сдачи в аренду дома, участки, офисы и многое другое",
+    "onSite2": "На этом сайте вам не нужно искать продавцов для арендования домов, участок, офисов и многого другого",
     "onSite3": "На этом сайте вам не нужно искать клиентов для сдачи в аренду дома, участки, офисы и многое другое",
     "ivideo": "Установите видео или рисунок ",
     "ivideopl": "(дом, участка, офис или другое)",
@@ -23,5 +23,9 @@
     "about": "О сайте",
     "contact": "Контакт",
     "submitbtn": "Войти",
-    "lang": "РУ"
+    "lang": "РУ",
+    "additionalinfincard": "Красивый, уютный и прочный дом сдается в аренду",
+    "phonenumber": "Номер телефона",
+    "logout": "Выйти",
+    "oyiga": "(В месяц)"
 }
