Admin menuItem end

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -27,5 +27,6 @@
     "additionalinfincard": "Beautiful, cozy and durable house for lease",
     "phonenumber": "Phone Number",
     "logout": "Log Out",
-    "oyiga": "(Per month)"
+    "oyiga": "(Per month)",
+    "admin": "Admin"
 }
