--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -27,5 +27,6 @@
     "additionalinfincard": "Красивый, уютный и прочный дом сдается в аренду",
     "phonenumber": "Номер телефона",
     "logout": "Выйти",
-    "oyiga": "(В месяц)"
+    "oyiga": "(В месяц)",
+    "admin": "Админ"
 }
