--- a/src/lang/uz.json
+++ b/src/lang/uz.json
@@ -27,5 +27,6 @@
     "additionalinfincard": "Chiroyli, shinam va mustaxkam uy ijaraga berilmoqda",
     "phonenumber": "Telefon raqami",
     "logout": "Chiqish",
-    "oyiga": "(Oyiga)"
+    "oyiga": "(Oyiga)",
+    "admin": "Admin"
 }
