--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -28,5 +28,6 @@
     "phonenumber": "Phone Number",
     "logout": "Log Out",
     "oyiga": "(Per month)",
-    "admin": "Admin"
+    "admin": "Admin",
+    "saralanganlar": "Favorites"
 }
