--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -28,5 +28,6 @@
     "phonenumber": "Номер телефона",
     "logout": "Выйти",
     "oyiga": "(В месяц)",
-    "admin": "Админ"
+    "admin": "Админ",
+    "saralanganlar": "Избранные"
 }
