--- a/src/lang/uz.json
+++ b/src/lang/uz.json
@@ -28,5 +28,6 @@
     "phonenumber": "Telefon raqami",
     "logout": "Chiqish",
     "oyiga": "(Oyiga)",
-    "admin": "Admin"
+    "admin": "Admin",
+    "saralanganlar": "Saralanganlar"
 }
