--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,7 +1,7 @@
 {
     "welcome": "Welcome to the",
     "welcomepl": "ArendaShop",
-    "onSite1": "On this site you can rent and lease houses, plants, offices and more",
+    "onSite1": "On this site you can rent and lease houses, plants, offices and much more",
     "onSite2": "On this site you don't need to look sellers for to rent out houses, plots, offices and much more",
     "onSite3": "On this site you don't need to look clients for to lease out houses, plots, offices and much more",
     "ivideo": "Install video or photo ",
