--- a/src/lang/uz.json
+++ b/src/lang/uz.json
@@ -29,5 +29,7 @@
     "logout": "Chiqish",
     "oyiga": "(Oyiga)",
     "admin": "Admin",
-    "saralanganlar": "Saralanganlar"
+    "saralanganlar": "Saralanganlar",
+    "saralanganYoq": "Saralangan_yoq",
+    "snachalaVoydite": "Avval royxatdan oting"
 }
