--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -31,5 +31,6 @@
     "admin": "Admin",
     "saralanganlar": "Favorites",
     "saralanganYoq": "No_favorites",
-    "snachalaVoydite": "Log in first"
+    "snachalaVoydite": "Log in first",
+    "meningtakliflarim": "My Suggestions"
 }
