--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -31,5 +31,6 @@
     "admin": "Админ",
     "saralanganlar": "Избранные",
     "saralanganYoq": "Нет_избранных",
-    "snachalaVoydite": "Сначала войдите"
+    "snachalaVoydite": "Сначала войдите",
+    "meningtakliflarim": "Мои Предложения"
 }
