--- a/client/src/lang/uz.json
+++ b/client/src/lang/uz.json
@@ -31,5 +31,6 @@
     "admin": "Admin",
     "saralanganlar": "Saralanganlar",
     "saralanganYoq": "Saralangan_yoq",
-    "snachalaVoydite": "Avval royxatdan oting"
+    "snachalaVoydite": "Avval royxatdan oting",
+    "meningtakliflarim": "Mening Takliflarim"
 }
