full project ended but I should add adaptation too

--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -32,5 +32,6 @@
     "saralanganlar": "Favorites",
     "saralanganYoq": "No_favorites",
     "snachalaVoydite": "Log in first",
-    "meningtakliflarim": "My Suggestions"
+    "meningtakliflarim": "My Suggestions",
+    "saralanganyoq": "No Favorites"
 }
