--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -32,5 +32,6 @@
     "saralanganlar": "Избранные",
     "saralanganYoq": "Нет_избранных",
     "snachalaVoydite": "Сначала войдите",
-    "meningtakliflarim": "Мои Предложения"
+    "meningtakliflarim": "Мои Предложения",
+    "saralanganyoq": "Нет Сохранённых"
 }
