--- a/client/src/lang/uz.json
+++ b/client/src/lang/uz.json
@@ -32,5 +32,6 @@
     "saralanganlar": "Saralanganlar",
     "saralanganYoq": "Saralangan_yoq",
     "snachalaVoydite": "Avval royxatdan oting",
-    "meningtakliflarim": "Mening Takliflarim"
+    "meningtakliflarim": "Mening Takliflarim",
+    "saralanganyoq": "Saralanganlar Yoq"
 }
