--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -33,5 +33,6 @@
     "saralanganYoq": "No_favorites",
     "snachalaVoydite": "Log in first",
     "meningtakliflarim": "My Suggestions",
-    "saralanganyoq": "No Favorites"
+    "saralanganyoq": "No Favorites",
+    "submitText": "Log In / Sign Up"
 }
