--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -33,5 +33,6 @@
     "saralanganYoq": "Нет_избранных",
     "snachalaVoydite": "Сначала войдите",
     "meningtakliflarim": "Мои Предложения",
-    "saralanganyoq": "Нет Сохранённых"
+    "saralanganyoq": "Нет Сохранённых",
+    "submitText": "Войти / Зарегистрироваться"
 }
