--- a/client/src/lang/uz.json
+++ b/client/src/lang/uz.json
@@ -33,5 +33,6 @@
     "saralanganYoq": "Saralangan_yoq",
     "snachalaVoydite": "Avval royxatdan oting",
     "meningtakliflarim": "Mening Takliflarim",
-    "saralanganyoq": "Saralanganlar Yoq"
+    "saralanganyoq": "Saralanganlar Yoq",
+    "submitText": "Kirish / Ro'yxatdan o'tish"
 }
