--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -34,5 +34,20 @@
     "snachalaVoydite": "Сначала войдите",
     "meningtakliflarim": "Мои Предложения",
     "saralanganyoq": "Нет Сохранённых",
-    "submitText": "Войти / Зарегистрироваться"
+    "submitText": "Войти / Зарегистрироваться",
+    "deletefromfeatures": "Удалить из избранных?",
+    "ha": "Да",
+    "yoq": "Нет",
+    "edit": "Правка информации",
+    "editBtn": "Правка",
+    "delete": "Удалить",
+    "title": "Заголовок",
+    "description": "Описание",
+    "price": "Цена",
+    "phone": "Номер телефона",
+    "updatebtn": "Обновить",
+    "deleteconfirm": "Вы уверены?",
+    "close": "Закрыть",
+    "deleteP": "Эта карточка будет удалена навсегда.",
+    "save": "Сохранить"
 }
