site was finished on 100%

--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -1,9 +1,9 @@
 {
     "welcome": "Welcome to the",
     "welcomepl": "ArendaShop",
-    "onSite1": "On this site you can rent and lease houses, plants, offices and much more",
-    "onSite2": "On this site you don't need to look sellers for to rent out houses, plots, offices and much more",
-    "onSite3": "On this site you don't need to look clients for to lease out houses, plots, offices and much more",
+    "onSite1": "Here you can rent and lease houses, plants, offices and much more",
+    "onSite2": "Here you don't need to look sellers for to rent out houses, plots, offices and much more",
+    "onSite3": "Here you don't need to look clients for to lease out houses, plots, offices and much more",
     "ivideo": "Install video or photo ",
     "ivideopl": "(house, plant, office or more)",
     "initalinf": "Inital information ",
