--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -1,9 +1,9 @@
 {
     "welcome": "Добро пожаловать в",
     "welcomepl": "ArendaShop",
-    "onSite1": "На этом сайте вы можете арендовать и сдавать в аренду дома, участки, офисы и многое другое",
-    "onSite2": "На этом сайте вам не нужно искать продавцов для арендования домов, участок, офисов и многого другого",
-    "onSite3": "На этом сайте вам не нужно искать клиентов для сдачи в аренду дома, участки, офисы и многое другое",
+    "onSite1": "Здесь вы можете арендовать и сдавать в аренду дома, участки, офисы и многое другое",
+    "onSite2": "Здесь вам не нужно искать продавцов для арендования домов, участок, офисов и многого другого",
+    "onSite3": "Здесь вам не нужно искать клиентов для сдачи в аренду дома, участки, офисы и многое другое",
     "ivideo": "Установите видео или рисунок ",
     "ivideopl": "(дом, участка, офис или другое)",
     "initalinf": "Начальная информация ",
