--- a/client/src/lang/uz.json
+++ b/client/src/lang/uz.json
@@ -1,9 +1,9 @@
 {
     "welcomepl": "xush kelibsiz",
     "welcome": "ArendaShop'ga",
-    "onSite1": "Ushbu saytda siz uylarni, uchastkalarni, idoralarni va boshqa narsalarni ijaraga berishingiz va ijaraga olishingiz mumkin",
-    "onSite2": "Ushbu saytda siz uylarni, uchastkalarni, idoralarni va boshqa narsalarni ijaraga olish uchun sotuvchilar izlashingizga hojat qolmaydi",
-    "onSite3": "Ushbu saytda siz uylarni, uchastkalarni, idoralarni va boshqa narsalarni ijaraga berish uchun mijozlar izlashingizga hojat qolmaydi",
+    "onSite1": "Buyerda siz uylarni, uchastkalarni, idoralarni va boshqa narsalarni ijaraga berishingiz va ijaraga olishingiz mumkin",
+    "onSite2": "Buyerda siz uylarni, uchastkalarni, idoralarni va boshqa narsalarni ijaraga olish uchun sotuvchilar izlashingizga hojat qolmaydi",
+    "onSite3": "Buyerda siz uylarni, uchastkalarni, idoralarni va boshqa narsalarni ijaraga berish uchun mijozlar izlashingizga hojat qolmaydi",
     "ivideo": "Video yoki rasm o'rnating ",
     "ivideopl": "(uy, uchastka, idora va boshqa narsalar)",
     "initalinf": "Dastlabki ma'lumot",
